Clean up unused files after Firebase migration